# RDF-Bikers

./: .gitignore  Readme.txt  pyproject.toml  run.bat  server.py
client/: package-lock.json  package.json
client/public/: index.html
client/src/: index.css
client/src/components/App/: index.css  index.js
client/src/components/Info_displayer/: index.css  index.js
client/src/components/Map/: index.js
client/src/components/Selecter/: index.css  index.js
client/src/components/Station/: index.css  index.js
jsonld/: context.py  main.py
ontology/: Lyon.owl  Paris.owl  StEtienne.owl  bike.owl
owl_inserter/: inserter.py  main.py
queries/: queries.py
rdf_data/: BikeLyon.n3  BikeParis.n3  BikeStEtienne.n3
