[tool.poetry]
name = "rdb-bikers"
version = "0.1.0"
description = ""
authors = ["Victor Goubet"]

[tool.poetry.dependencies]
python = "^3.8"
owlready2 = "^0.29"
rdflib = "^5.0.0"
flask = "^1.1.2"
folium = "^0.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
